[Config] Update notebook sidebar settings

--- a/notebook/review_writer.ipynb
+++ b/notebook/review_writer.ipynb
@@ -426,7 +426,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 22,
    "id": "af25b87c-e0e6-4fb0-b2dd-2d61ec2e3dbd",
    "metadata": {
     "scrolled": true
@@ -435,7 +435,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c3c226bf228f41ecbebcd5a419b59381",
+       "model_id": "8d522a7aa22648ce917ace548e767221",
        "version_major": 2,
        "version_minor": 0
       },
@@ -798,6 +798,16 @@
   "widgets": {
    "application/vnd.jupyter.widget-state+json": {
     "state": {
+     "00a688651a634c88b24b28aab12707e7": {
+      "model_module": "@jupyter-widgets/controls",
+      "model_module_version": "2.0.0",
+      "model_name": "HTMLModel",
+      "state": {
+       "description": "Content 1",
+       "layout": "IPY_MODEL_ebc5d1044f66414f8202845009b9be00",
+       "style": "IPY_MODEL_f26bc58d2f644d4686b0ae4ee94b4bc2"
+      }
+     },
      "02c4c01954334678949b708fdc734995": {
       "model_module": "@jupyter-widgets/controls",
       "model_module_version": "2.0.0",
@@ -807,6 +817,12 @@
        "layout": "IPY_MODEL_eb37c519c0474d188ee61045e0ba482c",
        "style": "IPY_MODEL_b3ed309c168e4fffabb529ea307a8a2a"
       }
+     },
+     "03472cf13a484b4a888586a77a0a1073": {
+      "model_module": "@jupyter-widgets/base",
+      "model_module_version": "2.0.0",
+      "model_name": "LayoutModel",
+      "state": {}
      },
      "04a0b4b735d949d7939448d1accf9adf": {
       "model_module": "@jupyter-widgets/controls",
@@ -874,6 +890,16 @@
         "Section 3",
         "Section 4"
        ]
+      }
+     },
+     "105d588459934132a8d5e52a1a350d86": {
+      "model_module": "@jupyter-widgets/controls",
+      "model_module_version": "2.0.0",
+      "model_name": "HTMLStyleModel",
+      "state": {
+       "description_width": "",
+       "font_size": null,
+       "text_color": null
       }
      },
      "15cb487afa5942d2b9c340d21e3fbf0b": {
@@ -1087,6 +1113,12 @@
        "text_color": null
       }
      },
+     "44b30c68f1014b9188a0ef9ee37a4a18": {
+      "model_module": "@jupyter-widgets/base",
+      "model_module_version": "2.0.0",
+      "model_name": "LayoutModel",
+      "state": {}
+     },
      "49ba377912f046428e23432ef6e65363": {
       "model_module": "@jupyter-widgets/controls",
       "model_module_version": "2.0.0",
@@ -1107,6 +1139,16 @@
        "description": "Section 2",
        "layout": "IPY_MODEL_a7446e80b4ca40b28a5c90e6aebc4bc2",
        "style": "IPY_MODEL_0545a06de2954c80848c0a95a8cfd6e2"
+      }
+     },
+     "4bbcb54091da43a982e150164ed79cb5": {
+      "model_module": "@jupyter-widgets/controls",
+      "model_module_version": "2.0.0",
+      "model_name": "HTMLModel",
+      "state": {
+       "description": "Content 4",
+       "layout": "IPY_MODEL_b261c99f6248497397f2cd62a6a0d569",
+       "style": "IPY_MODEL_dadfbdd70ebd43439688cc1f983ced64"
       }
      },
      "4c20d47609ec44528b2838cc6cc9c725": {
@@ -1179,6 +1221,12 @@
        "tooltip": "Click and generate details for this section"
       }
      },
+     "586179f18fd44571901d1645d859c8e6": {
+      "model_module": "@jupyter-widgets/base",
+      "model_module_version": "2.0.0",
+      "model_name": "LayoutModel",
+      "state": {}
+     },
      "5d4f1fbf2393458b9d5e6158acafa6a2": {
       "model_module": "@jupyter-widgets/controls",
       "model_module_version": "2.0.0",
@@ -1249,6 +1297,16 @@
        "text_decoration": null
       }
      },
+     "664787fe10694a049980c5363a10e667": {
+      "model_module": "@jupyter-widgets/controls",
+      "model_module_version": "2.0.0",
+      "model_name": "HTMLModel",
+      "state": {
+       "description": "Content 2",
+       "layout": "IPY_MODEL_a52298789f844559b94d91a64c8fe651",
+       "style": "IPY_MODEL_105d588459934132a8d5e52a1a350d86"
+      }
+     },
      "6a7a575bfddb4eeb8716bd89426061d9": {
       "model_module": "@jupyter-widgets/base",
       "model_module_version": "2.0.0",
@@ -1273,6 +1331,20 @@
        "description": "Content 2",
        "layout": "IPY_MODEL_f5bd356641bb4b20ae6878b287fab770",
        "style": "IPY_MODEL_f1986e35fe1542adb407f926df237a62"
+      }
+     },
+     "6d26fa943d6b4c62899274addf8769ee": {
+      "model_module": "@jupyter-widgets/controls",
+      "model_module_version": "2.0.0",
+      "model_name": "ButtonStyleModel",
+      "state": {
+       "font_family": null,
+       "font_size": null,
+       "font_style": null,
+       "font_variant": null,
+       "font_weight": null,
+       "text_color": null,
+       "text_decoration": null
       }
      },
      "6d63b8412eb441d4a7a7ceb39f2e7fb6": {
@@ -1331,6 +1403,18 @@
        "description": "Section 4",
        "layout": "IPY_MODEL_4c20d47609ec44528b2838cc6cc9c725",
        "style": "IPY_MODEL_8a865dd8c0c444e2b302b8bd27fa71b7"
+      }
+     },
+     "78f009f5eaa6459db66411b242d524b2": {
+      "model_module": "@jupyter-widgets/controls",
+      "model_module_version": "2.0.0",
+      "model_name": "ButtonModel",
+      "state": {
+       "description": "Generate Details",
+       "icon": "radiation",
+       "layout": "IPY_MODEL_b1b4df0610324766b546c8489cc5393b",
+       "style": "IPY_MODEL_6d26fa943d6b4c62899274addf8769ee",
+       "tooltip": "Click and generate details for this section"
       }
      },
      "7cb5a2023a69403085171ffb7dfa74ec": {
@@ -1434,6 +1518,19 @@
        "text_color": null
       }
      },
+     "8d522a7aa22648ce917ace548e767221": {
+      "model_module": "@jupyter-widgets/controls",
+      "model_module_version": "2.0.0",
+      "model_name": "VBoxModel",
+      "state": {
+       "children": [
+        "IPY_MODEL_78f009f5eaa6459db66411b242d524b2",
+        "IPY_MODEL_a76840f75fa946a5badce317d33182f9",
+        "IPY_MODEL_ab8f2c668c7d476d9a2220466ed55e51"
+       ],
+       "layout": "IPY_MODEL_586179f18fd44571901d1645d859c8e6"
+      }
+     },
      "90fe712fb6c44ef28d4fc35a133cbb7a": {
       "model_module": "@jupyter-widgets/controls",
       "model_module_version": "2.0.0",
@@ -1515,6 +1612,18 @@
       "model_name": "LayoutModel",
       "state": {}
      },
+     "a52298789f844559b94d91a64c8fe651": {
+      "model_module": "@jupyter-widgets/base",
+      "model_module_version": "2.0.0",
+      "model_name": "LayoutModel",
+      "state": {}
+     },
+     "a5fbd171a989411e9ae5afd223d41f66": {
+      "model_module": "@jupyter-widgets/base",
+      "model_module_version": "2.0.0",
+      "model_name": "LayoutModel",
+      "state": {}
+     },
      "a686db340a9e40ca8b5f495803c95ea4": {
       "model_module": "@jupyter-widgets/controls",
       "model_module_version": "2.0.0",
@@ -1530,6 +1639,27 @@
       "model_module_version": "2.0.0",
       "model_name": "LayoutModel",
       "state": {}
+     },
+     "a76840f75fa946a5badce317d33182f9": {
+      "model_module": "@jupyter-widgets/controls",
+      "model_module_version": "2.0.0",
+      "model_name": "TabModel",
+      "state": {
+       "children": [
+        "IPY_MODEL_00a688651a634c88b24b28aab12707e7",
+        "IPY_MODEL_664787fe10694a049980c5363a10e667",
+        "IPY_MODEL_ecdfa80a089b4d49be8c7cff0079afeb",
+        "IPY_MODEL_4bbcb54091da43a982e150164ed79cb5"
+       ],
+       "layout": "IPY_MODEL_a5fbd171a989411e9ae5afd223d41f66",
+       "selected_index": 2,
+       "titles": [
+        "Section 1",
+        "Section 2",
+        "Section 3",
+        "Section 4"
+       ]
+      }
      },
      "a877a426b999420492070d256902669c": {
       "model_module": "@jupyter-widgets/base",
@@ -1558,6 +1688,21 @@
        ]
       }
      },
+     "ab8f2c668c7d476d9a2220466ed55e51": {
+      "model_module": "@jupyter-widgets/output",
+      "model_module_version": "1.0.0",
+      "model_name": "OutputModel",
+      "state": {
+       "layout": "IPY_MODEL_03472cf13a484b4a888586a77a0a1073",
+       "outputs": [
+        {
+         "name": "stdout",
+         "output_type": "stream",
+         "text": "Button clicked at 2023-09-07 01:26:04.788644\n"
+        }
+       ]
+      }
+     },
      "ae9f70a87eac4b63966ce59af293816e": {
       "model_module": "@jupyter-widgets/base",
       "model_module_version": "2.0.0",
@@ -1580,13 +1725,35 @@
        "text_color": null
       }
      },
+     "af4791ed3ea34134b957fa0b20c30e64": {
+      "model_module": "@jupyter-widgets/controls",
+      "model_module_version": "2.0.0",
+      "model_name": "HTMLStyleModel",
+      "state": {
+       "description_width": "",
+       "font_size": null,
+       "text_color": null
+      }
+     },
      "b164fe0534b44d349a45c51cfcd506b9": {
       "model_module": "@jupyter-widgets/base",
       "model_module_version": "2.0.0",
       "model_name": "LayoutModel",
       "state": {}
      },
+     "b1b4df0610324766b546c8489cc5393b": {
+      "model_module": "@jupyter-widgets/base",
+      "model_module_version": "2.0.0",
+      "model_name": "LayoutModel",
+      "state": {}
+     },
      "b2196a0e229342e09d974c4582523d20": {
+      "model_module": "@jupyter-widgets/base",
+      "model_module_version": "2.0.0",
+      "model_name": "LayoutModel",
+      "state": {}
+     },
+     "b261c99f6248497397f2cd62a6a0d569": {
       "model_module": "@jupyter-widgets/base",
       "model_module_version": "2.0.0",
       "model_name": "LayoutModel",
@@ -1832,6 +1999,16 @@
        "text_decoration": null
       }
      },
+     "dadfbdd70ebd43439688cc1f983ced64": {
+      "model_module": "@jupyter-widgets/controls",
+      "model_module_version": "2.0.0",
+      "model_name": "HTMLStyleModel",
+      "state": {
+       "description_width": "",
+       "font_size": null,
+       "text_color": null
+      }
+     },
      "db9edefb128e42768cc92ed252da8015": {
       "model_module": "@jupyter-widgets/controls",
       "model_module_version": "2.0.0",
@@ -1932,6 +2109,22 @@
       "model_name": "LayoutModel",
       "state": {}
      },
+     "ebc5d1044f66414f8202845009b9be00": {
+      "model_module": "@jupyter-widgets/base",
+      "model_module_version": "2.0.0",
+      "model_name": "LayoutModel",
+      "state": {}
+     },
+     "ecdfa80a089b4d49be8c7cff0079afeb": {
+      "model_module": "@jupyter-widgets/controls",
+      "model_module_version": "2.0.0",
+      "model_name": "HTMLModel",
+      "state": {
+       "description": "Content 3",
+       "layout": "IPY_MODEL_44b30c68f1014b9188a0ef9ee37a4a18",
+       "style": "IPY_MODEL_af4791ed3ea34134b957fa0b20c30e64"
+      }
+     },
      "ee56a073d02a420396edf634889e07a7": {
       "model_module": "@jupyter-widgets/base",
       "model_module_version": "2.0.0",
@@ -1955,6 +2148,16 @@
       }
      },
      "f1a4e75d04eb4e6ca80f30bb806e3e12": {
+      "model_module": "@jupyter-widgets/controls",
+      "model_module_version": "2.0.0",
+      "model_name": "HTMLStyleModel",
+      "state": {
+       "description_width": "",
+       "font_size": null,
+       "text_color": null
+      }
+     },
+     "f26bc58d2f644d4686b0ae4ee94b4bc2": {
       "model_module": "@jupyter-widgets/controls",
       "model_module_version": "2.0.0",
       "model_name": "HTMLStyleModel",
