[Feature] Example of real-time change Intro

--- a/notebook/review_writer.ipynb
+++ b/notebook/review_writer.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 20,
    "id": "6bd0166d-e107-4dc3-a95d-f72a5357e3d2",
    "metadata": {
     "editable": true,
@@ -20,7 +20,7 @@
       "  %reload_ext autoreload\n",
       "Repo path:   [E:\\_codes\\GPT-Paper]\n",
       "Working dir: [E:\\_codes\\GPT-Paper\\notebook]\n",
-      "Now: [2023-09-08 03:44:50.994104]\n"
+      "Now: [2023-09-08 03:49:25.930291]\n"
      ]
     }
    ],
@@ -430,14 +430,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 21,
    "id": "3ca948c2-d240-45e2-91b9-d4f99bcac84a",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c4a66c5e8ed3459c85db7b9dfc1ba13b",
+       "model_id": "e9ec9d32a12b4034bcf1d82088fc0c77",
        "version_major": 2,
        "version_minor": 0
       },
@@ -453,7 +453,7 @@
      "output_type": "stream",
      "text": [
       "CPU times: total: 15.6 ms\n",
-      "Wall time: 13.1 ms\n"
+      "Wall time: 15 ms\n"
      ]
     }
    ],
@@ -671,6 +671,14 @@
        "value": "Current advances of AI-based approaches for clinical management of liver cancer"
       }
      },
+     "16f8a925fc2a4cca87f285d7d4766c3f": {
+      "model_module": "@jupyter-widgets/base",
+      "model_module_version": "2.0.0",
+      "model_name": "LayoutModel",
+      "state": {
+       "width": "100%"
+      }
+     },
      "174e6f0f96344b789401e5ad8cce75e7": {
       "model_module": "@jupyter-widgets/controls",
       "model_module_version": "2.0.0",
@@ -783,6 +791,12 @@
        "text_decoration": null
       }
      },
+     "30e628d1298c431096b0f16728189e11": {
+      "model_module": "@jupyter-widgets/base",
+      "model_module_version": "2.0.0",
+      "model_name": "LayoutModel",
+      "state": {}
+     },
      "31b3485d9ff349a2a69bff6d2b445049": {
       "model_module": "@jupyter-widgets/controls",
       "model_module_version": "2.0.0",
@@ -812,6 +826,12 @@
       "state": {
        "width": "100%"
       }
+     },
+     "34973c65933846dbb22af01578fb8655": {
+      "model_module": "@jupyter-widgets/base",
+      "model_module_version": "2.0.0",
+      "model_name": "LayoutModel",
+      "state": {}
      },
      "3751871aedcd4e25b4ba0e62bba6bc47": {
       "model_module": "@jupyter-widgets/controls",
@@ -849,6 +869,14 @@
        "font_weight": null,
        "text_color": null,
        "text_decoration": null
+      }
+     },
+     "3b0bc469446a4112b6e367a52df4837a": {
+      "model_module": "@jupyter-widgets/base",
+      "model_module_version": "2.0.0",
+      "model_name": "LayoutModel",
+      "state": {
+       "width": "100%"
       }
      },
      "3bfeba41d1aa42d4b9ac1d3f7ad0c32f": {
@@ -899,12 +927,11 @@
       "model_name": "OutputModel",
       "state": {
        "layout": "IPY_MODEL_94b06787d6cd420baccfb00e0ca60858",
-       "msg_id": "5a4db065-26cc-4422-b6e3-36ace0614b28",
        "outputs": [
         {
          "name": "stdout",
          "output_type": "stream",
-         "text": "Prompt Tokens count: [4173]\n"
+         "text": "Prompt Tokens count: [4173]\n# Topic: An overview of the latest developments in AI technologies and their applications in the clinical management of liver cancer.\n\n# Statements:\n\n1. Recent advances in artificial intelligence (AI) methodologies have revolutionized the clinical management of liver cancer by automatically quantifying pathological patterns based on digital histological slides. [1-1.7, 2-5.5]\n2. AI algorithms and computer-aided techniques enhance tumor diagnosis, prognostic prediction, and therapy targeting in liver cancer, surpassing human limitations and improving patient management. [1-1.7, 2-5.5]\n3. AI models, such as machine learning and deep learning, are being utilized to diagnose and manage liver diseases and mass lesions, reducing human errors and improving treatment protocols. [2-4.7, 2-5.5]\n4. AI in hepatology has shown tremendous promise in planning appropriate management strategies for liver diseases, thus improving treatment outcomes and patient care. [2-1.4]\n5. The integration of AI in gastroenterology and hepatology fields has accelerated the development of AI applications in liver cancer management, including liver fibrosis detection, non-alcoholic fatty liver disease diagnosis, and hepatocellular cancer prognosis. [2-5.5]\n6. AI-based imaging analysis, particularly deep learning using convolutional neural networks (CNNs), has significantly advanced liver cancer research, enabling intelligent decision-making models for clinical diagnosis. [3-5.5]\n7. Quantitative analysis of the global research trends in AI for liver cancer using bibliometrics reveals rapid development, with China leading in publications, but further research on fusion analysis of multiple data types and treatment decision-making is needed. [3-2.6, 3-6.7]\n8. AI has the potential to predict future HCC risk in patients with liver disease and improve the accuracy of HCC diagnosis, prognosis, and treatment decisions, but prospective studies are needed to fully demonstrate its clinical impact. [4-12.12]\n\n# References:\n[1] Development of a deep pathomics score for predicting hepatocellular carcinoma recurrence after liver transplantation\n[2] Artificial Intelligence in Hepatology Ready for the Primetime\n[3] Quantitative analysis of artificial intelligence on liver cancer\n[4] JOH 2022 Artificial intelligence for the prevention and clinical management of hepatocellular carcinoma\nResponse Tokens count: [482] [stop]\n"
         }
        ]
       }
@@ -1023,6 +1050,21 @@
        "layout": "IPY_MODEL_e7e9108163794dc8ac60bfe718315e19",
        "style": "IPY_MODEL_1eade84dd2d54557b2fdbd32282e07fb",
        "value": "An overview of the latest developments in AI technologies and their applications in the clinical management of liver cancer."
+      }
+     },
+     "588995b2b6ba43e985fb41f9e68badd7": {
+      "model_module": "@jupyter-widgets/output",
+      "model_module_version": "1.0.0",
+      "model_name": "OutputModel",
+      "state": {
+       "layout": "IPY_MODEL_b6ad302ede78434683e4f55dca940093",
+       "outputs": [
+        {
+         "name": "stdout",
+         "output_type": "stream",
+         "text": "Prompt Tokens count: [4165]\n# Topic: Latest developments in AI technologies and their applications in the clinical management of liver cancer.\n\n# Statements:\n\n1. Recent advances in AI methodologies have revolutionized the clinical management of liver cancer by automating the quantification of pathological patterns based on digital histological slides [18] [1-3].\n2. AI tools such as machine learning, deep learning, and big data are being extensively applied in hepatology for the diagnosis and management of liver diseases and mass lesions, including hepatocellular carcinoma (HCC) [19] [1-3].\n3. Integration of AI algorithms and recurrence prediction models in liver transplant patients with HCC holds great potential for improving patient outcomes and prognosis [1].\n4. AI-based algorithms have shown promising results in reducing human errors, improving treatment protocols, and providing personalized healthcare in the clinical management of liver cancer [2].\n5. The development of AI in hepatology has accelerated with the increased usage of AI in gastroenterology, leading to advancements in liver fibrosis detection, non-alcoholic fatty liver disease (NAFLD) diagnosis, and hepatocellular cancer detection [5] [1-3].\n6. AI systems for liver segmentation and diagnosis are expected to be widely available within the next 5 years, facilitating liver lesion characterization and aiding in liver transplantation [2].\n7. The conglomeration of clinical, laboratory, multi-omics, natural language processing (NLP), and image recognition data has enabled the prediction of fibrosis, classification of liver masses, and treatment response in liver cancer [6] [1-3].\n8. Real-time biomonitoring using AI can identify high-risk patients for clinical decompensation and hospital admission, enabling timely intervention and improved patient outcomes [6].\n9. Bibliometric analysis reveals that AI research in liver cancer has witnessed rapid development since 2017, with China being the most productive country in terms of publications, while the USA leads in terms of impact [4].\n10. Current research in AI for liver cancer primarily focuses on imaging data analysis, but there is a need to explore the fusion analysis of multiple data types and multi-modal treatment decision-making in the future [10].\n11. Prospective studies and randomized clinical trials are essential to fully demonstrate the potential of AI in improving the clinical care of patients with hepatocellular carcinoma [11].\n12. The development of AI in liver cancer requires collaboration between researchers, clinicians, and data scientists to overcome challenges and create clinically useful tools [2].\n\n# References:\n[1] Development of a deep pathomics score for predicting hepatocellular carcinoma recurrence after liver transplantation\n[2] Artificial Intelligence in Hepatology Ready for the Primetime\n[3] Quantitative analysis of artificial intelligence on liver cancer\n[4] JOH 2022 Artificial intelligence for the prevention and clinical management of hepatocellular carcinoma\nResponse Tokens count: [573] [stop]\n"
+        }
+       ]
       }
      },
      "5a524f428fab4da286f915f6aabd7835": {
@@ -1176,6 +1218,18 @@
       "model_name": "LayoutModel",
       "state": {}
      },
+     "7840f1a9dac54507bc7393ce9e3e61a5": {
+      "model_module": "@jupyter-widgets/controls",
+      "model_module_version": "2.0.0",
+      "model_name": "ButtonModel",
+      "state": {
+       "description": "Translate",
+       "icon": "language",
+       "layout": "IPY_MODEL_c9411469fa0c46ca9315591dd8b801e2",
+       "style": "IPY_MODEL_990e19a986ea4ccda855b93d753f4b64",
+       "tooltip": "Click and translate the details for this section"
+      }
+     },
      "7881e1e44f144a42a45b79acbfa7ad0e": {
       "model_module": "@jupyter-widgets/base",
       "model_module_version": "2.0.0",
@@ -1191,6 +1245,17 @@
        "layout": "IPY_MODEL_3d7c01a2790e40518a8752fb70f04597",
        "style": "IPY_MODEL_4dba2e5f34bc4c59b92b7a8564d46832",
        "value": "Latest developments in AI technologies and their applications in the clinical management of liver cancer."
+      }
+     },
+     "80922fdb2bf64c9aac5c013da94a3ce4": {
+      "model_module": "@jupyter-widgets/controls",
+      "model_module_version": "2.0.0",
+      "model_name": "TextModel",
+      "state": {
+       "description": "Title",
+       "layout": "IPY_MODEL_16f8a925fc2a4cca87f285d7d4766c3f",
+       "style": "IPY_MODEL_af1a1dbaf8024da9a41a369b15461053",
+       "value": "Current advances of AI-based approaches for clinical management of liver cancer"
       }
      },
      "831e428c19d7462d9a572bef76e3347d": {
@@ -1387,6 +1452,20 @@
        "value": "Current advances of AI-based approaches for clinical management of liver cancer"
       }
      },
+     "990e19a986ea4ccda855b93d753f4b64": {
+      "model_module": "@jupyter-widgets/controls",
+      "model_module_version": "2.0.0",
+      "model_name": "ButtonStyleModel",
+      "state": {
+       "font_family": null,
+       "font_size": null,
+       "font_style": null,
+       "font_variant": null,
+       "font_weight": null,
+       "text_color": null,
+       "text_decoration": null
+      }
+     },
      "9e860049616f4257bae5ed8496bcb455": {
       "model_module": "@jupyter-widgets/controls",
       "model_module_version": "2.0.0",
@@ -1413,7 +1492,7 @@
       "model_module_version": "2.0.0",
       "model_name": "ButtonStyleModel",
       "state": {
-       "button_color": "orange",
+       "button_color": "darkgreen",
        "font_family": null,
        "font_size": null,
        "font_style": null,
@@ -1505,6 +1584,16 @@
        "width": "100%"
       }
      },
+     "af1a1dbaf8024da9a41a369b15461053": {
+      "model_module": "@jupyter-widgets/controls",
+      "model_module_version": "2.0.0",
+      "model_name": "TextStyleModel",
+      "state": {
+       "description_width": "",
+       "font_size": null,
+       "text_color": null
+      }
+     },
      "b19b9fc0e7db4af5b4f6c9ce930c5c02": {
       "model_module": "@jupyter-widgets/base",
       "model_module_version": "2.0.0",
@@ -1535,6 +1624,38 @@
        "description_width": "",
        "font_size": null,
        "text_color": null
+      }
+     },
+     "b6ad302ede78434683e4f55dca940093": {
+      "model_module": "@jupyter-widgets/base",
+      "model_module_version": "2.0.0",
+      "model_name": "LayoutModel",
+      "state": {}
+     },
+     "b6cec0dfe4f8493ba1000de0e88a2038": {
+      "model_module": "@jupyter-widgets/controls",
+      "model_module_version": "2.0.0",
+      "model_name": "ButtonStyleModel",
+      "state": {
+       "button_color": "darkgreen",
+       "font_family": null,
+       "font_size": null,
+       "font_style": null,
+       "font_variant": null,
+       "font_weight": null,
+       "text_color": null,
+       "text_decoration": null
+      }
+     },
+     "b907202971d84f108eaba29703c80442": {
+      "model_module": "@jupyter-widgets/controls",
+      "model_module_version": "2.0.0",
+      "model_name": "TextModel",
+      "state": {
+       "description": "Intro",
+       "layout": "IPY_MODEL_3b0bc469446a4112b6e367a52df4837a",
+       "style": "IPY_MODEL_c50ede806c78459dbea350cf73f7d5d0",
+       "value": "Latest developments in AI technologies and their applications in the clinical management of liver cancer."
       }
      },
      "b954649a0a8346589088c3ef2cb32c47": {
@@ -1578,7 +1699,23 @@
        "layout": "IPY_MODEL_1260f906093542bc946a32135898e287"
       }
      },
+     "c50ede806c78459dbea350cf73f7d5d0": {
+      "model_module": "@jupyter-widgets/controls",
+      "model_module_version": "2.0.0",
+      "model_name": "TextStyleModel",
+      "state": {
+       "description_width": "",
+       "font_size": null,
+       "text_color": null
+      }
+     },
      "c89d7d51bb4a439d95cb07c2c2a3b953": {
+      "model_module": "@jupyter-widgets/base",
+      "model_module_version": "2.0.0",
+      "model_name": "LayoutModel",
+      "state": {}
+     },
+     "c9411469fa0c46ca9315591dd8b801e2": {
       "model_module": "@jupyter-widgets/base",
       "model_module_version": "2.0.0",
       "model_name": "LayoutModel",
@@ -1784,6 +1921,20 @@
        "width": "100%"
       }
      },
+     "e9ec9d32a12b4034bcf1d82088fc0c77": {
+      "model_module": "@jupyter-widgets/controls",
+      "model_module_version": "2.0.0",
+      "model_name": "VBoxModel",
+      "state": {
+       "children": [
+        "IPY_MODEL_efa7e57566ee4a5fa152e341b4152f48",
+        "IPY_MODEL_80922fdb2bf64c9aac5c013da94a3ce4",
+        "IPY_MODEL_b907202971d84f108eaba29703c80442",
+        "IPY_MODEL_588995b2b6ba43e985fb41f9e68badd7"
+       ],
+       "layout": "IPY_MODEL_34973c65933846dbb22af01578fb8655"
+      }
+     },
      "ea875612007e4f58a630830e7801be36": {
       "model_module": "@jupyter-widgets/controls",
       "model_module_version": "2.0.0",
@@ -1856,6 +2007,18 @@
        "layout": "IPY_MODEL_3385eded6f3243e0a0deac78457578b5",
        "style": "IPY_MODEL_6a065640b61c49e79fef31577cda2875",
        "value": "Current advances of AI-based approaches for clinical management of liver cancer"
+      }
+     },
+     "efa7e57566ee4a5fa152e341b4152f48": {
+      "model_module": "@jupyter-widgets/controls",
+      "model_module_version": "2.0.0",
+      "model_name": "ButtonModel",
+      "state": {
+       "description": "Summarize",
+       "icon": "radiation",
+       "layout": "IPY_MODEL_30e628d1298c431096b0f16728189e11",
+       "style": "IPY_MODEL_b6cec0dfe4f8493ba1000de0e88a2038",
+       "tooltip": "Summarize this section based on the topic and intro"
       }
      },
      "f682847bf0e8464088828a9c1490022f": {
